first design stuff

--- a/index.html
+++ b/index.html
@@ -4,57 +4,68 @@ title: Homepage
 section: home
 ---
 
-<div class="c-row c-row--alpha">
+<section class="c-row c-row--lg c-row--full c-intro js-section" data-color="#fff">
+    <div class="c-background-image" style="background-image:url(img/photos/bg-1.jpg)"></div>
     <div class="o-container">
-        <section class="o-grid o-grid--gutter">
-            <div class="o-grid__item">
-                <h1>Chopstick Boilerplate</h1>
-                <p class="tagline">// The lightweight, responsive, plug &amp; play design framework</p>
-            </div>
-        </section>
+        <div class="c-intro__content">
+            <h1 class="c-intro__title u-ms8-bp3">Klimop biedt kinderen iets moois aan op een minder gebruikelijke manier.</h1>
+        </div>
     </div>
-</div>
-
-<div class="c-row c-row--alpha">
+    <p class="c-intro__more">
+        Ontdek wat klimop zo anders maakt
+    </p>
+</section>
+<section class="c-row c-row--xl u-bgcolor-neutral-xxx-light u-bgcolor-alpha-light js-section" data-color="#000">
     <div class="o-container">
-        <div class="o-grid o-grid--gutter c-main-row">
-            <div class="o-grid__item u-1-of-2-bp3">
-                <h2>Opstick, opstick, opstick...</h2>
-                <p>One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections.</p>
-                <p>
-                    <a href="#" class="c-button c-button--alpha c-button--md">
-                        Button {% include atom.symbol.html value="right" %}
-                    </a>
-                </p>
+        <div class="u-max-width-md">
+            <h1 class="u-ms8-bp3 u-mb-epsilon">Klimop biedt kinderen iets moois aan op een minder gebruikelijke manier.</h1>
+        </div>
+        <div class="o-grid o-grid--gutter">
+            <div class="o-grid__item u-1-of-2-bp4">
+                <div class="u-max-width-sm">
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet error, iure earum consectetur dolore illum voluptatum, non. Sint ex aut quis quia hic soluta, libero aspernatur ratione perferendis, officia provident.
+                        At est explicabo, repellendus similique dignissimos, repellat quibusdam labore a odit corporis. Molestiae iure amet dolorem ut, repudiandae illum asperiores consectetur autem.
+                    </p>
+                    <p>
+                        Nobis molestiae, itaque deleniti quidem vitae vel quia praesentium nesciunt, excepturi, aperiam exercitationem aut, ab nam voluptate! At voluptatum consequuntur earum iusto? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic error aliquam, repudiandae rem culpa unde reprehenderit commodi! Sequi quidem, nesciunt quaerat, iure blanditiis voluptatem repellendus consequatur voluptates corporis ratione laudantium.
+                    </p>
+                </div>
             </div>
-            <div class="o-grid__item u-1-of-2-bp3">
-                <h2>Soep eet je met een...</h2>
-                <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked.</p>
-                <p>
-                    <a href="#" class="c-button c-button--beta c-button--md">
-                        Button  {% include atom.symbol.html value="right" %}
-                    </a>
-                </p>
+            <div class="o-grid__item u-1-of-2-bp4">
+                <div class="u-max-width-sm">
+                    <p>
+                        At earum corrupti voluptatibus! Fugit, doloremque vel ipsa, inventore dolore consequuntur saepe, quod perspiciatis totam maiores possimus alias quidem deleniti quo, magni? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit, maiores tenetur ea tempora vel libero iusto deserunt vero illo. Unde ducimus officia asperiores voluptatum consectetur, fugit inventore ipsum eaque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates eaque doloremque, obcaecati eum in nobis porro vel incidunt quos. Vitae nam quaerat delectus tenetur ex deserunt obcaecati autem, adipisci voluptatem.
+                    </p>
+                    <p>
+                        Eveniet sapiente, sequi in, totam sunt modi, qui ut alias, quaerat nam amet distinctio voluptates necessitatibus nesciunt? Iusto officia neque earum nobis! Voluptates eaque doloremque, obcaecati eum in nobis porro vel incidunt quos.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-</div>
-
-<div class="c-row c-row--alpha">
+</section>
+<section class="c-row c-row--xl u-bgcolor-beta-base js-section" data-color="#fff">
     <div class="o-container">
-        <div class="o-grid o-grid--gutter c-doormat-row">
-            <div class="o-grid__item u-1-of-3-bp4">
-                <h5>Lorem ipsum dolor sit</h5>
-                <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. </p>
-            </div>
-            <div class="o-grid__item u-1-of-3-bp4">
-                <h5>Lorem ipsum dolor sit</h5>
-                <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. </p>
-            </div>
-            <div class="o-grid__item u-1-of-3-bp4">
-                <h5>Lorem ipsum dolor sit</h5>
-                <p>The bedding was hardly able to cover it and seemed ready to slide off any moment. His many legs, pitifully thin compared with the size of the rest of him, waved about helplessly as he looked. </p>
-            </div>
+        <div class="u-max-width-md u-align-horizontal u-color-beta-x-dark">
+            <h2>Goed onderwijs wordt gegeven met passie, gebaseerd op een inspirerende visie die tot uitdrukking komt in een doorleefde samenhang, zoals in de dagelijkse praktijk van Freinet.</h2>
         </div>
     </div>
-</div>
+</section>
+<section class="c-row c-row--lg u-bgcolor-neutral-xxx-light js-section" data-color="#000">
+    <div class="o-container">
+        {% include trumps.colors.html %}
+    </div>
+</section>
+<section class="c-row c-row--lg u-bgcolor-neutral-xxx-light js-section" data-color="#000">
+    <div class="o-container">
+        <div class="u-max-width-md">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
+            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci suscipit tenetur dolorem eos, eius quasi voluptate rerum deserunt sint beatae saepe quas cum repellendus nihil, iusto perspiciatis vitae. Hic, sit!
+            </p>
+        </div>
+    </div>
+</section>
