--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Homepage
 section: home
 ---
 
-<section class="c-row c-row--lg c-row--full c-intro js-section" data-color="#fff">
+<section class="c-row c-row--xl c-row--full c-intro">
     <div class="c-background-image" style="background-image:url(img/photos/bg-1.jpg)"></div>
     <div class="o-container">
         <div class="c-intro__content">
@@ -12,60 +12,196 @@ section: home
         </div>
     </div>
     <p class="c-intro__more">
-        Ontdek wat klimop zo anders maakt
+        Ontdek hoe een dag van een kind eruit ziet in Klimop
     </p>
 </section>
-<section class="c-row c-row--xl u-bgcolor-neutral-xxx-light u-bgcolor-alpha-light js-section" data-color="#000">
+<section class="c-row c-row--xl c-row--timeline">
+    <div class="o-container">
+        <div class="c-timeline">
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    8:00
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Het onthaal op Klimop
+                        </h2>
+                        <p>
+                            We vinden het belangrijk dat niet alleen het kind naar school komt maar ook zijn verhalen. Daarmee willen we immers aan de slag gaan. Ouders zijn dan ook meer dan welkom om dat te verhelderen. Vooral net voor of na schooltijd worden er veel nieuwtjes uitgewisseld. Een plezante ontmoeting in de klas of in de Schapenstal of op de speelplaats…
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    8:40
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            De kring als vertrekpunt van de klaspraktijk
+                        </h2>
+                        <p>
+                            De kinderen kunnen ‘s morgens in de kring hun verhaal kwijt, tonen een voorwerp of tekening, lezen een (zelfgeschreven) tekst, vertellen over het nieuws,... Vanuit deze verhalen zoeken de kinderen samen met de leerkracht hoe die aanleiding kunnen zijn tot projecten, onderzoek, teksten, rekenverhalen, taalactiviteiten, creamomenten. Doorheen de jaren op Klimop ontwikkelen de kinderen een actieve luister- en spreekhouding in de kring. Ze worden ook geleidelijk aan voorbereid om de praatronde zelfstandig te leiden. Zo krijgen de kinderen de verantwoordelijkheid om vanuit eigen belevingen tot leerprocessen te komen.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    9:20
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Projecten en werkstukken
+                        </h2>
+                        <p>
+                            Kinderen hoeven geen wandelende encyclopedieën te worden, maar moeten vooral leren hoe ze de wereld op hun manier het beste kunnen onderzoeken. Ze ervaren die wereld ook niet als opgesplitste in vakken (aardrijkskunde, geschiedenis, verkeer,...) en dat willen we zo houden. Bij de kleuters en de eerste graad worden de projecten eerder klassikaal aangepakt . Naarmate de kinderen ouder worden, regelen ze meer dingen zelf.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    10:40
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Pauze
+                        </h2>
+                        <p>
+                            Samen is meestal fijner dan alleen. Bovendien maken pauzes deel uit van een werkdag. Daarom wordt er op Klimop ruim aandacht besteed aan deze klasmomenten. Na of voor de speeltijd krijgt iedereen zijn gezonde sap en hap en kunnen de kinderen ondertussen genieten van een verhaal, een probleem bespreken of luisteren naar wat er komt. Ook over de middag eten we in de klassen onze boterhammen op en kan er verse soep worden geslurpt.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    Doorlopend
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            (individuele) begeleiding bij specifieke problemen
+                        </h2>
+                        <p>
+                            De opvolging van de kinderen, zowel op cognitief als sociaal-emotioneel vlak, vindt bijna dagelijks plaats. Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmethoden maken het mogelijk de kinderen heel nauw te observeren en dit op een vlotte manier te registeren. Welbevinden en betrokkenheid van kinderen vinden we even belangrijk als de vooruitgang op kennisvlak.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    12:00
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Middagpauze
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    13:10
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Taal en rekenen doorheen de week
+                        </h2>
+                        <p>
+                            Vertrekken vanuit de realiteit, daar gaat ‘t om op Klimop. Ook bij rekenen en taal willen we het zo aanpakken. Naast de methode, die een haalbaar compromis is, willen we zoveel mogelijk levend rekenen en taal binnen de klas halen. Doorheen de week worden er inoefenmomenten en toffe automatisatieopdrachten gepland. De koppeling van techniek en inhoud is van begin af aan belangrijk. Alles vindt plaats in een voor de kinderen zinvol verband.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    14:40
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Pauze
+                        </h2>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    15:30
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Een terugblik op de voorbije dag of week
+                        </h2>
+                        <p>
+                            Er is gedurende een hele dag samen gewerkt en geleefd. Er zijn prettige en misschien minder prettige dingen gebeurd. Het is dan ook goed om de dag samen op een goede manier af te sluiten. Teksten die gemaakt zijn worden voorgelezen, onderzoekjes worden voorgesteld, toneeltjes gespeeld, tekeningen geëxposeerd, afspraken die belangrijk zijn voor de volgende dag worden gemaakt,... Om de 14 dagen zetten we de hele school samen: een forum vindt dan plaats in de arena of op een verdiep of ergens anders op het domein.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="c-timeline__item">
+                <p class="c-timeline__time">
+                    16:00
+                </p>
+                <div class="c-timeline__body">
+                    <div class="u-max-width-sm">
+                        <h2 class="c-timeline__title">
+                            Onthaal
+                        </h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="c-row c-row--xl u-bgcolor-neutral-xxx-light u-bgcolor-alpha-light">
     <div class="o-container">
         <div class="u-max-width-md">
-            <h1 class="u-ms8-bp3 u-mb-epsilon">Klimop biedt kinderen iets moois aan op een minder gebruikelijke manier.</h1>
+            <h1 class="u-ms8-bp3 u-mb-epsilon u-color-gamma-dark">In klimop vinden we een open school-klimaat zeer belangrijk.</h1>
         </div>
         <div class="o-grid o-grid--gutter">
             <div class="o-grid__item u-1-of-2-bp4">
                 <div class="u-max-width-sm">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet error, iure earum consectetur dolore illum voluptatum, non. Sint ex aut quis quia hic soluta, libero aspernatur ratione perferendis, officia provident.
-                        At est explicabo, repellendus similique dignissimos, repellat quibusdam labore a odit corporis. Molestiae iure amet dolorem ut, repudiandae illum asperiores consectetur autem.
+                        Dit start door de ouders een welkom gevoel te geven. Ouders stoppen hier niet aan de schoolpoort maar zijn elke dag welkom in de klassen. Voor en na de lessen kan je altijd terecht in de klassen. Op die manier ontstaan er informele gesprekken tussen ouders, leerkracht en andere ouders. Op die manier weten ouders wat er gebeurt in de klassen en verhogen we de betrokkenheid en het groepsgevoel bij de ouders.
                     </p>
                     <p>
-                        Nobis molestiae, itaque deleniti quidem vitae vel quia praesentium nesciunt, excepturi, aperiam exercitationem aut, ab nam voluptate! At voluptatum consequuntur earum iusto? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic error aliquam, repudiandae rem culpa unde reprehenderit commodi! Sequi quidem, nesciunt quaerat, iure blanditiis voluptatem repellendus consequatur voluptates corporis ratione laudantium.
+                        Gezien vanuit de visie van freinetonderwijs nemen ouders een belangrijke plaats in. De school probeert daarom de ouders zeer nauw bij het schoolleven te betrekken. Dat gaat verder dan alleen de zorg voor het eigen kind. Er zijn veel mogelijkheden om als ouder actief deel te nemen aan het schoolleven, en dit op verschillende niveaus.
                     </p>
                 </div>
             </div>
             <div class="o-grid__item u-1-of-2-bp4">
                 <div class="u-max-width-sm">
+                    <h3>Op schoolniveau</h3>
                     <p>
-                        At earum corrupti voluptatibus! Fugit, doloremque vel ipsa, inventore dolore consequuntur saepe, quod perspiciatis totam maiores possimus alias quidem deleniti quo, magni? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam velit, maiores tenetur ea tempora vel libero iusto deserunt vero illo. Unde ducimus officia asperiores voluptatum consectetur, fugit inventore ipsum eaque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates eaque doloremque, obcaecati eum in nobis porro vel incidunt quos. Vitae nam quaerat delectus tenetur ex deserunt obcaecati autem, adipisci voluptatem.
+                        Schooloverleg ,het uitvoeren van praktische klussen, thema-avonden, meehelpen met schoolfeest en andere activiteiten, meedenken/werken in een werkgroep, vrijwillige ouderbijdrage, deelnemen aan co-team,…
+                    </p>
+                    <h3>
+                        Op klasniveau
+                    </h3>
+                    <p>
+                        Klasoverleg bijwonen, ateliers mee begeleiden, rijden voor zwemmen en sporten, poetsen van de klas, leesouder, meegaan op uitstap, met je talenten fungeren als informatiebron/model, en nog zo veel meer...
                     </p>
                     <p>
-                        Eveniet sapiente, sequi in, totam sunt modi, qui ut alias, quaerat nam amet distinctio voluptates necessitatibus nesciunt? Iusto officia neque earum nobis! Voluptates eaque doloremque, obcaecati eum in nobis porro vel incidunt quos.
+                        We realiseren ons dat het niet voor iedereen haalbaar is, maar als we allemaal ons steentje bijdragen kunnen we zo bouwen aan een open school met een plaats en begrip voor ieders mening en talenten en maken we echt samen school
                     </p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="c-row c-row--xl u-bgcolor-beta-base js-section" data-color="#fff">
+<section class="c-row c-row--xl u-bgcolor-beta-base">
     <div class="o-container">
-        <div class="u-max-width-md u-align-horizontal u-color-beta-x-dark">
+        <div class="u-max-width-md u-align-horizontal u-text-center u-color-beta-x-dark">
             <h2>Goed onderwijs wordt gegeven met passie, gebaseerd op een inspirerende visie die tot uitdrukking komt in een doorleefde samenhang, zoals in de dagelijkse praktijk van Freinet.</h2>
-        </div>
-    </div>
-</section>
-<section class="c-row c-row--lg u-bgcolor-neutral-xxx-light js-section" data-color="#000">
-    <div class="o-container">
-        {% include trumps.colors.html %}
-    </div>
-</section>
-<section class="c-row c-row--lg u-bgcolor-neutral-xxx-light js-section" data-color="#000">
-    <div class="o-container">
-        <div class="u-max-width-md">
-            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit</h1>
-            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit</h2>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit</h3>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci suscipit tenetur dolorem eos, eius quasi voluptate rerum deserunt sint beatae saepe quas cum repellendus nihil, iusto perspiciatis vitae. Hic, sit!
-            </p>
         </div>
     </div>
 </section>
