--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ section: home
         <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="c-intro__title u-ms7-bp3">In Klimop staat de wereld van het kind centraal zodat leren voor hen boeiend blijft.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">In Klimop staat de wereld van het kind centraal zodat leren voor hen boeiend blijft.</h1>
             </div>
         </div>
         <!-- <p class="c-intro__more">
@@ -16,14 +16,14 @@ section: home
         </p> -->
     </div>
     <div class="c-row c-row--clear-tb">
-        <figure class="c-pictures c-pictures--first">
-            <div class="c-picture">
+        <figure class="c-pictures c-pictures--first js-pictures">
+            <div class="c-picture" data-stellar-ratio="2">
                 <img class="c-picture__image js-blazy" src="img/photos/small/DSC_1853.jpg" data-src-small="img/photos/small/DSC_1853.jpg" data-src-medium="img/photos/medium/DSC_1853.jpg" data-src="img/photos/large/DSC_1853.jpg" alt="">
             </div>
-            <div class="c-picture">
+            <div class="c-picture" data-stellar-ratio="3">
                 <img class="c-picture__image js-blazy" src="img/photos/small/82.jpg" data-src-small="img/photos/small/82.jpg" data-src-medium="img/photos/medium/82.jpg" data-src="img/photos/large/82.jpg" alt="">
             </div>
-            <div class="c-picture">
+            <div class="c-picture" data-stellar-ratio="5">
                 <img class="c-picture__image js-blazy" src="img/photos/small/84.jpg" data-src-small="img/photos/small/84.jpg" data-src-medium="img/photos/medium/84.jpg" data-src="img/photos/large/84.jpg" alt="">
             </div>
         </figure>
@@ -207,8 +207,8 @@ section: home
         <div class="o-container">
             <div class="c-row__section c-row__section--xxl">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
-                    <h1 class="u-color-gamma-dark u-ms8-bp3">
-                        In klimop vinden we een open school-klimaat zeer belangrijk.
+                    <h1 class="u-color-gamma-dark u-ms7-bp3">
+                        Samen school maken. In klimop vinden we een open school-klimaat zeer belangrijk.
                     </h1>
                 </div>
             </div>
@@ -245,10 +245,7 @@ section: home
             </div>
             <div class="c-row__section c-row__section--xxl">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
-                    <h1 class="u-ms8-bp3 u-mb-beta u-color-gamma-dark">Hoe werkt dat, Freinet? </h1>
-                    <p>
-                        We beschrijven de waarden van freinet door de ogen van een klas
-                    </p>
+                    <h1 class="u-ms7-bp3 u-mb-beta u-color-gamma-dark">Hoe werkt dat, Freinet? De waarden van freinet door de ogen van een klas.</h1>
                 </div>
             </div>
             <div class="c-row__section c-row__section--xxl">
@@ -277,19 +274,22 @@ section: home
                     <p>
                         De leerkracht noteert haar bevindingen over de verschillende kinderen. Wie heeft welke rol binnen het project? Is dat iets uitdagend voor die persoon? Wie heeft er grote stappen gezet? Waarin moeten we volgende keer proberen uitdagen?
                     </p>
-
                 </div>
             </div>
         </div>
     </div>
-</div>
-<section class="c-section c-section--cta">
-    <div class="c-row c-row--xxl">
+
+    <div class="c-row c-row--xxl c-row--cta">
         <div class="o-container">
             <div class="u-max-width-md u-text-center u-align-horizontal">
-                <h1>Genoeg gelezen, tijd om te ontdekken! Kom op 18 februari tussen 10 en 13u naar Klimop.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Kom op 18 februari tussen 10 en 13u naar Klimop.</h1>
                 <p>Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
+                <p>
+                    <a href="#!" class="c-button c-button--gamma c-button--lg">
+                        Schrijf je in via Facebook
+                    </a>
+                </p>
             </div>
         </div>
     </div>
-</section>
+</div>
