--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ section: home
         </figure>
     </div>
 </section>
-<div class="c-section c-section--climate-vision">
+<section class="c-section c-section--climate">
     <div class="c-row c-row--xxl">
         <div class="o-container">
             <div class="c-row__section c-row__section--xxl">
@@ -243,6 +243,14 @@ section: home
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="c-section c-section--vision">
+    <div class="c-row c-row--xxl">
+        <div class="o-container">
+
             <div class="c-row__section c-row__section--xxl">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
                     <h1 class="u-ms7-bp3 u-mb-beta u-color-gamma-dark">Hoe werkt dat, Freinet? De waarden van freinet door de ogen van een klas.</h1>
@@ -292,4 +300,7 @@ section: home
             </div>
         </div>
     </div>
-</div>
+    <div class="c-page-header">
+        {% include components.header.html %}
+    </div>
+</section>
