added timeline aside info

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ section: home
             <div class="c-row__section c-row__section--xxl">
                 <div class="c-timeline-holder">
                     <div class="c-timeline">
-                        <div class="c-timeline__item">
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 8:00
                             </p>
@@ -56,8 +56,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Vanuit de interesses van een kind ontdekken we een interessant project: ruimte. Iets wat duidelijk leeft, ook al heeft iedereen er een ander kader voor. 
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 8:40
                             </p>
@@ -71,8 +76,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    De leerstof is meteen veel levendiger en aantrekkelijker als ze gaat over iets waarin je bent geïnteresseerd. 
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 9:20
                             </p>
@@ -86,8 +96,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Kleinere groepjes zorgen voor een persoonlijker aanpak en maken de klas alles behalve anoniem.
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 10:40
                             </p>
@@ -101,8 +116,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Kleinere groepjes zorgen voor een persoonlijker aanpak en maken de klas alles behalve anoniem.
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 Doorlopend
                             </p>
@@ -116,8 +136,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Kleinere groepjes zorgen voor een persoonlijker aanpak en maken de klas alles behalve anoniem.
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 12:00
                             </p>
@@ -128,8 +153,8 @@ section: home
                                     </h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 13:10
                             </p>
@@ -143,8 +168,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Kleinere groepjes zorgen voor een persoonlijker aanpak en maken de klas alles behalve anoniem.
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 14:40
                             </p>
@@ -155,8 +185,8 @@ section: home
                                     </h2>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 15:30
                             </p>
@@ -170,8 +200,13 @@ section: home
                                     </p>
                                 </div>
                             </div>
-                        </div>
-                        <div class="c-timeline__item">
+                            <aside class="c-timeline__aside">
+                                <p class="c-timeline__info">
+                                    Kleinere groepjes zorgen voor een persoonlijker aanpak en maken de klas alles behalve anoniem.
+                                </p>
+                            </aside>
+                        </article>
+                        <article class="c-timeline__item">
                             <p class="c-timeline__time">
                                 16:00
                             </p>
@@ -248,6 +283,7 @@ section: home
 </section>
 
 <section class="c-section c-section--vision">
+    {% comment %}
     <div class="c-row c-row--xxl">
         <div class="o-container">
 
@@ -286,7 +322,7 @@ section: home
             </div>
         </div>
     </div>
-
+    {% endcomment %}
     <div class="c-row c-row--xxl c-row--cta">
         <div class="o-container">
             <div class="u-max-width-md u-text-center u-align-horizontal">
@@ -299,8 +335,5 @@ section: home
                 </p>
             </div>
         </div>
-    </div>
-    <div class="c-page-header">
-        {% include components.header.html %}
     </div>
 </section>
