--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ section: home
         <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">In Klimop staat de wereld van het kind centraal zodat leren voor hen boeiend blijft.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een alledaagse school, maar toch helemaal anders. Met structuren en regels, maar vanuit de wereld van de kinderen én in een kasteel.</h1>
             </div>
         </div>
         <!-- <p class="c-intro__more">
