toch met kasteel

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ section: home
         <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een alledaagse school, maar toch helemaal anders. </h1><p>Met structuren en regels, maar vanuit de wereld van de kinderen.</p>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een alledaagse school, maar toch helemaal anders. </h1>
+                <p>Met structuren en regels, maar vanuit de wereld van de kinderen én in een kasteel!</p>
             </div>
         </div>
         <!-- <p class="c-intro__more">
