--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ section: home
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
                 <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een alledaagse school, maar toch helemaal anders. </h1>
-                <p>Met structuren en regels, maar vanuit de wereld van de kinderen én in een kasteel!</p>
+                <p>Met structuren en afspraken, maar vanuit de leefwereld van de kinderen. Een school waar ouders, leerkrachten en kinderen zeggenschap hebben en dat allemaal in een prachtig kasteel.</p>
             </div>
         </div>
         <!-- <p class="c-intro__more">
