weer enkel de H1 bovenaan

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ section: home
         <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een alledaagse school, maar toch helemaal anders. </h1>
-                <p>Met structuren en afspraken, maar vanuit de leefwereld van de kinderen. Een school waar ouders, leerkrachten en kinderen zeggenschap hebben en dat allemaal in een prachtig kasteel.</p>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Een gewone school, maar helemaal anders. Met structuren en afspraken, vanuit de leefwereld van je kind.</h1>
+         
             </div>
         </div>
         <!-- <p class="c-intro__more">
