--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ Kinderen van andere klassen hebben de raket zien opstijgen. Ze komen vragen hoe 
                             <div class="c-timeline__body">
                                 <div class="u-max-width-sm">
                                     <h2 class="c-timeline__title">
-                                        Onthaal
+                                        Einde van de dag
                                     </h2>
                                 </div>
                             </div>
