tekst lay-out nog wat aangepast.

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ Een goede klasorganisatie en het toepassen van daaraan aangepaste opvolgingsmeth
                                 <p class="c-timeline__info">
 Sommigen knutselen een ruimtepak in elkaar, anderen toveren zichzelf om in een marsmannetje. We splitsen ons op in verschillende hoeken. Een groepje bouwt een sterrenhemel in de klas. Twee vriendinnen wagen zich aan een tekst over astronauten en onder impuls van de leerkracht krijgt een lege petfles een nieuw leven als raket.
                                 </p>
-                                 <p>
+                                 <p class="c-timeline__info">
 De leerkracht noteert haar bevindingen over de verschillende kinderen. Wie heeft welke rol binnen het project? Wie heeft er grote stappen gezet? Waarin moeten we volgende keer proberen uitdagen? 
                                 </p>
                             </aside>
@@ -149,12 +149,13 @@ De leerkracht noteert haar bevindingen over de verschillende kinderen. Wie heeft
                                      <p>
 Samen pauzeren is meestal fijner dan alleen. Bovendien maken pauzes deel uit van een werkdag. Daarom wordt er op Klimop ruim aandacht besteed aan deze klasmomenten. Tijdens de buitentijd respecteert iedereen de vooraf afgebakende speelzones, er is geen hekken maar een duidelijke afspraak die bekrachtigd werd door de schoolraad. Afspraken die we als groep nemen of bekrachtigen zijn veel effectiever dan diegene die worden opgelegd.                                    </p>
                                 </div>
-                                   <aside class="c-timeline__aside">
+                               
+                            </div>
+                                <aside class="c-timeline__aside">
                                 <p class="c-timeline__info">
 De pauze is er om uit te waaien. Het grote, groene domein stimuleert de exploratiedrang bij de kinderen. Na de speeltijd krijgt iedereen zijn gezonde hap en sap en kunnen de kinderen ondertussen genieten van een verhaal of bespreken we een probleem die voorkwam. 
                                        </p>
                                 </aside>
-                            </div>
                         </article>
                         <article class="c-timeline__item">
                             <p class="c-timeline__time">
