--- a/index.html
+++ b/index.html
@@ -353,7 +353,8 @@ In de praktijk is dat soms een beetje puzzelen. Niet iedereen kan evenveel tijd 
     <div class="c-row c-row--xxl c-row--cta">
         <div class="o-container">
             <div class="u-max-width-md u-text-center u-align-horizontal">
-                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken! Kom op 18 februari tussen 10 en 13u naar Klimop.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-x-dark">Genoeg gelezen, tijd om te ontdekken!<br> Kom op 18 februari tussen 10 en 13u naar Klimop.</h1>
+                 <p>icon-location Freinetschool Klimop, Fabiolalaan 2, 8020 Oostkamp - icon-phone 050 39 69 79 - icon-mail info@klimop.info</p>
                 <p>Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                 <p>
                     <a href="#!" class="c-button c-button--gamma c-button--lg">
