--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ section: home
         <!-- <div class="c-background-image c-background-image--opacity-alpha js-blazy" data-src="img/photos/2_17.jpg"></div> -->
         <div class="o-container">
             <div class="u-max-width-md u-align-horizontal u-text-center">
-                <h1 class="u-ms7-bp3 u-color-alpha-dark">Een gewone school, maar helemaal anders. Met structuren en afspraken, vanuit de leefwereld van je kind.</h1>
+                <h1 class="u-ms7-bp3 u-color-alpha-dark">Een gewone school, maar helemaal anders. Met activiteiten en afspraken, vanuit de leefwereld van je kind.</h1>
             </div>
         </div>
         <!-- <p class="c-intro__more">
