--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ section: home
             <div class="c-row__section c-row__section--xxl">
                 <div class="u-max-width-md u-text-center u-align-horizontal">
                     <h1 class="u-color-beta-base u-ms7-bp3">
-                        Elke dag een nieuw verhaal, samen geschreven, vormgegeven en gepubliceert.
+                        Elke dag een nieuw verhaal: samen geschreven, vormgegeven en gepubliceerd.
                     </h1>
                 </div>
             </div>
