--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ section: home
                             <div class="c-timeline__body">
                                 <div class="u-max-width-sm">
                                     <h2 class="c-timeline__title">
-                                        Projecten en werkstukke
+                                        Projecten en werkstukken
                                     </h2>
                                     <p>
                                         Kinderen hoeven geen wandelende encyclopedieën te worden, maar moeten vooral leren hoe ze de wereld op hun manier het beste kunnen onderzoeken. Ze ervaren die wereld ook niet als opgesplitste in vakken (aardrijkskunde, geschiedenis, verkeer,...) en dat willen we zo houden. Bij de kleuters en de eerste graad worden de projecten eerder klassikaal aangepakt . Naarmate de kinderen ouder worden, regelen ze meer dingen zelf. De freinetmethodiek vertrekt ook vanuit verschillende soorten intelligentie: sociale intelligentie, ruimtelijk inzicht, esthetisch aanvoelen, mentale kracht en motorisch vermogen. Iedereen heeft zijn eigen talenten, die hij of zij op een andere manier kan ontwikkelen.
