--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@ section: home
                     <p class="u-mb-delta">Op 18 februari kan je al je vragen stellen op de opendeurdag. </p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                            Schrijf je in via Facebook
+                            Schrijf je in voor de opendeurdag via Facebook
                         </a>
                     </p>
                 </div>
@@ -331,7 +331,7 @@ section: home
                     <p class="u-mb-delta">Spreek met ouders en leerkrachten, breng je kinderen mee en proef de school zelf.</p>
                     <p>
                         <a href="#!" class="c-button c-button--gamma c-button--round c-button--shadow c-button--lg">
-                            Schrijf je in via Facebook
+                             Schrijf je in voor de opendeurdag via Facebook
                         </a>
                     </p>
                 </div>
